kustomize/overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  tls:
    - hosts:
        - dev.playbuilder.xyz
        - custody-dev.playbuilder.xyz
        - datalab-dev.playbuilder.xyz
  rules:
    - host: dev.playbuilder.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
    - host: custody-dev.playbuilder.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
    - host: datalab-dev.playbuilder.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
